--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "riskident",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0"
+    "angular": "^1.4.0",
+    "normalize-css": "^7.0.0",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
